Improvement: Better message placeholder configuration